--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
   "name": "AvisLog - 私人鸟类观测系统",
   "short_name": "AvisLog",
   "description": "高端私人鸟类观测与管理系统",
-  "start_url": "./index.html",
+  "start_url": "./",
   "display": "standalone",
   "background_color": "#f8fafc",
   "theme_color": "#059669",
